--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -1,6 +1,6 @@
-$bar-color: #b8c2cc !default;
+$bar-color: #9ca1a7 !default;
 $bar-stroke: #8d99a6 !default;
-$border-color: #e0e0e0 !default;
+$border-color: #bbbbbb !default;
 $light-bg: #f5f5f5 !default;
 $light-border-color: #ebeff2 !default;
 $light-yellow: #fcf8e3 !default;
